refactor(processing): remove legacy process task chain (#1509)
* chore(dispatch): claim PT-01 redundancy cleanup

* refactor(processing): remove legacy process task chain